k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app-vote-latin.com
      secretName: voting-tls-selfsigned
  rules:
  - host: app-vote-latin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote-service
              port:
                number: 80
        - path: /result
          pathType: Prefix
          backend:
            service:
              name: result-service
              port:
                number: 80
